made all the pages

--- a/index.html
+++ b/index.html
@@ -11,32 +11,59 @@
 </head>
 
 <body>
-    <header class="header">
-        <section class="container">
-            <header id="logo">
-                <h1>Alexander Hau</h1>
-            </header>
-            <nav class="nav">
-                <a href="#">About</a>|
-                <a href="#">Portfolio</a>|
-                <a href="#">Contact</a>
-            </nav>
-        </section>
-    </header>
-    <main class="container">
-        <article class="content">
-            <h1>About Me</h1>
-            <section class="contbody">
-                <figure>
-                    <img src="http://via.placeholder.com/300">
-                </figure>
-                Lorem ipsum dolor sit amet, ea est atqui eloquentiam, his cibo dolorum salutandi eu. Vix ut suas honestatis dissentiet. Debitis omittam liberavisse cu mea, iudico percipitur et per. Te sea affert vocent referrentur. Eum ea congue ignota, an dolores fabellas eum, ne mucius essent ius. Te nec argumentum scripserit, eirmod feugiat perfecto no eum, vidisse deserunt voluptatibus eu mea.
+    <div class="wrapper">
+        <header class="header">
+            <section class="container">
+                <header id="logo">
+                    <h1>Alexander Hau</h1>
+                </header>
+                <nav class="nav">
+                    <ul>
+                        <li><a href="./index.html">About</a></li>
+                        <li>|</li>
+                        <li><a href="./portfolio.html">Portfolio</a></li>
+                        <li>|</li>
+                        <li><a href="./contact.html">Contact</a></li>
+                    </ul>
+                </nav>
             </section>
-        </article>
-    </main>
-    <footer>
-        Copyright ©2018
-    </footer>
+        </header>
+        <main class="container">
+            <article class="content">
+                <h1 class="title">About Me</h1>
+                <section class="contbody">
+                    <figure>
+                        <img src="./assets/images/300.png">
+                    </figure>
+                    <p>
+                        Lorem ipsum dolor sit amet, ea est atqui eloquentiam, 
+                        his cibo dolorum salutandi eu. Vix ut suas honestatis dissentiet. 
+                        Debitis omittam liberavisse cu mea, iudico percipitur et per. 
+                        Te sea affert vocent referrentur. Eum ea congue ignota, an dolores 
+                        fabellas eum, ne mucius essent ius. Te nec argumentum scripserit, 
+                        eirmod feugiat perfecto no eum, vidisse deserunt voluptatibus eu mea.
+                        Lorem ipsum dolor sit amet, ea est atqui eloquentiam, 
+                        his cibo dolorum salutandi eu. Vix ut suas honestatis dissentiet. 
+                        Debitis omittam liberavisse cu mea, iudico percipitur et per. 
+                        Te sea affert vocent referrentur. Eum ea congue ignota, an dolores 
+                        fabellas eum, ne mucius essent ius. Te nec argumentum scripserit, 
+                        eirmod feugiat perfecto no eum, vidisse deserunt voluptatibus eu mea.
+                        Lorem ipsum dolor sit amet, ea est atqui eloquentiam, 
+                        his cibo dolorum salutandi eu. Vix ut suas honestatis dissentiet. 
+                        Debitis omittam liberavisse cu mea, iudico percipitur et per. 
+                        Te sea affert vocent referrentur. Eum ea congue ignota, an dolores 
+                        fabellas eum, ne mucius essent ius. Te nec argumentum scripserit, 
+                        eirmod feugiat perfecto no eum, vidisse deserunt voluptatibus eu mea.
+                        
+                       
+                    </p>
+                </section>
+            </article>
+        </main>
+        <footer>
+                Copyright ©2018  
+        </footer>
+    </div>
 
    
 
