validate html fix 1

--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
         <main class="container">
             <article class="content">
                 <h1 class="title">Contact Me</h1>
-                <section class="contbody">
+                <div class="contbody">
                     <form id="contactform">
                         Name:<br>
                         <input class="ftext" type="text" name="firstname">
@@ -46,7 +46,7 @@
                         <input class="btnsubmit" type="submit">
                     </form> 
                            
-                </section>
+                </div>
             </article>
         </main>
         <footer>
