--- a/portfolio.html
+++ b/portfolio.html
@@ -31,32 +31,32 @@
         <main class="container">
             <article class="content">
                 <h1 class="title">Portfolio</h1>
-                <section class="contbody">
+                <div class="contbody">
                     <figure class="portfolio">
-                        <img src="./assets/images/dog.jpg">
+                        <img src="./assets/images/dog.jpg" alt="portfolio image">
                         <h3 class="ptitle">The Dog</h3>
                     </figure>    
                     <figure class="portfolio">
-                        <img src="./assets/images/planet.jpg">
+                        <img src="./assets/images/planet.jpg" alt="portfolio image">
                         <h3 class="ptitle">The Planets</h3>
                     </figure>    
                     <figure class="portfolio">
-                        <img src="./assets/images/scenery.jpg">
+                        <img src="./assets/images/scenery.jpg" alt="portfolio image">
                         <h3 class="ptitle">The Scenery</h3>
                     </figure>    
                     <figure class="portfolio">    
-                        <img src="./assets/images/shot.jpg">
+                        <img src="./assets/images/shot.jpg" alt="portfolio image">
                         <h3 class="ptitle">Some Shots</h3>
                     </figure>    
                     <figure class="portfolio">                        
-                        <img src="https://picsum.photos/200/?random">
+                        <img src="https://picsum.photos/200/?random" alt="portfolio image">
                         <h3 class="ptitle">The Nice Picture</h3>
                     </figure>    
                     <figure class="portfolio">
-                        <img src="https://picsum.photos/203/?random">
+                        <img src="https://picsum.photos/203/?random" alt="portfolio image">
                         <h3 class="ptitle">The Good Photo</h3>
                     </figure>
-                </section>
+                </div>
             </article>
         </main>
         <footer>
