--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <div class="wrapper">
         <header class="header">
             <section class="container">
-                <header id="logo">
+                <section id="logo">
                     <h1>Alexander Hau</h1>
-                </header>
+                </section>
                 <nav class="nav">
                     <ul>
                         <li><a href="./index.html">About</a></li>
@@ -31,9 +31,9 @@
         <main class="container">
             <article class="content">
                 <h1 class="title">About Me</h1>
-                <section class="contbody">
+                <div class="contbody">
                     <figure>
-                        <img src="./assets/images/300.png">
+                        <img src="./assets/images/300.png" alt="profile image">
                     </figure>
                     <p>
                         Lorem ipsum dolor sit amet, ea est atqui eloquentiam, 
@@ -57,7 +57,7 @@
                         
                        
                     </p>
-                </section>
+                </div>
             </article>
         </main>
         <footer>
