--- a/index.html
+++ b/index.html
@@ -36,24 +36,12 @@
                         <img src="./assets/images/300.png" alt="profile image">
                     </figure>
                     <p>
-                        Lorem ipsum dolor sit amet, ea est atqui eloquentiam, 
-                        his cibo dolorum salutandi eu. Vix ut suas honestatis dissentiet. 
-                        Debitis omittam liberavisse cu mea, iudico percipitur et per. 
-                        Te sea affert vocent referrentur. Eum ea congue ignota, an dolores 
-                        fabellas eum, ne mucius essent ius. Te nec argumentum scripserit, 
-                        eirmod feugiat perfecto no eum, vidisse deserunt voluptatibus eu mea.
-                        Lorem ipsum dolor sit amet, ea est atqui eloquentiam, 
-                        his cibo dolorum salutandi eu. Vix ut suas honestatis dissentiet. 
-                        Debitis omittam liberavisse cu mea, iudico percipitur et per. 
-                        Te sea affert vocent referrentur. Eum ea congue ignota, an dolores 
-                        fabellas eum, ne mucius essent ius. Te nec argumentum scripserit, 
-                        eirmod feugiat perfecto no eum, vidisse deserunt voluptatibus eu mea.
-                        Lorem ipsum dolor sit amet, ea est atqui eloquentiam, 
-                        his cibo dolorum salutandi eu. Vix ut suas honestatis dissentiet. 
-                        Debitis omittam liberavisse cu mea, iudico percipitur et per. 
-                        Te sea affert vocent referrentur. Eum ea congue ignota, an dolores 
-                        fabellas eum, ne mucius essent ius. Te nec argumentum scripserit, 
-                        eirmod feugiat perfecto no eum, vidisse deserunt voluptatibus eu mea.
+                        I graduated from George Brown College and got a 3 years Advanced Diploma in Programmer Analyst.
+                        After graduating, I got hired at a non-profit organization as their general assistant. One of my main
+                        tasks there were to maintain their website. I applied some of the things I learned
+                        from college while working at the organization, but most of it went unused. So my goal at this bootcamp
+                        is to get me rolling in doing personal projects and brushing up in my coding skills, specifically
+                        backend.
                         
                        
                     </p>
