added hangman link

--- a/portfolio.html
+++ b/portfolio.html
@@ -33,8 +33,10 @@
                 <h1 class="title">Portfolio</h1>
                 <div class="contbody">
                     <figure class="portfolio">
-                        <img src="./assets/images/dog.jpg" alt="portfolio image">
-                        <h3 class="ptitle">The Dog</h3>
+                        <a href="https://chestirito.github.io/word-guess-game/" target="_blank">
+                            <img src="./assets/images/hangman.jpeg" alt="portfolio image">
+                            <h3 class="ptitle">Anime Hangman</h3>
+                        </a>
                     </figure>    
                     <figure class="portfolio">
                         <img src="./assets/images/planet.jpg" alt="portfolio image">
