updated portfolio link

--- a/portfolio.html
+++ b/portfolio.html
@@ -35,7 +35,7 @@
                     <figure class="portfolio">
                         <a href="https://chestirito.github.io/word-guess-game/" target="_blank">
                             <img src="./assets/images/hangman.jpeg" alt="portfolio image">
-                            <h3 class="ptitle">Anime Hangman</h3>
+                            <h3 class="ptitle">Guess Old Anime</h3>
                         </a>
                     </figure>    
                     <figure class="portfolio">
